--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Copenhagen",
   "author": "Zendesk",
-  "version": "4.13.2",
+  "version": "4.13.2.1",
   "api_version": 4,
-  "default_locale": "en-us",
+  "default_locale": "es-es",
   "settings": [
     {
       "label": "colors_group_label",
